--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=amazonas
-
-# The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore.p12
-# The password used to generate the certificate
-server.ssl.key-store-password=qwe123
-# The alias mapped to the certificate
-server.ssl.key-alias=https_cert
 server.port=8443
+
+# ssl
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=qwe123
+server.ssl.key-alias=https_cert
 server.ssl.enabled=true
 
+# mysql
+database.host=localhost
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${database.host}:3306/amazonas_db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
 
 
