--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
+spring.jpa.hibernate.naming.physical-strategy=com.amazonas.backend.repository.ShortNamingStrategy
+
 
