--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.url=jdbc:mysql://${database.host}:3306/amazonas_db
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.hibernate.naming.physical-strategy=com.amazonas.backend.repository.ShortNamingStrategy
 
